# sem5-opt

./: .gitignore  pyproject.toml
labs/: 1.py  2.py  2_try.py  3.py  4.py  funcs.py  output.txt
other/: script.py
reports/: 1.docx  2.docx
