[tool.poetry]
name = "labs"
version = "0.1.0"
description = ""
authors = ["poslam <kirden04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
sympy = "^1.13.3"
matplotlib = "^3.9.2"
pypandoc = "^1.14"
black = "^24.10.0"
scipy = "^1.14.1"
tabulate = "^0.9.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
